[fix] fancytree directory arrow spacing

--- a/scss/_tree-fancy.scss
+++ b/scss/_tree-fancy.scss
@@ -240,7 +240,7 @@
 
 					// ELEMENT: Expander
 					> span.fancytree-expander {
-						margin: 3px 0 3px -20px;
+						margin: 3px 0 3px -10px;
 
 						@include icon(before, chevron-right, false);
 					}
